# PaperTrail

./: .env.example  .gitignore  Makefile  README.md  app.py  config.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
evals/results/: ablation_recall.json  fulltext_comparison.json  spotcheck_report.md  summary.csv  summary.md
evals/results/6514a2caaf/: config_snapshot.yaml  raw.jsonl
evals/results/88befd366b/: raw.jsonl
evals/results/bb1d9be74c/: config_snapshot.yaml  raw.jsonl
src/agent/: cli.py  graph.py  llm.py  prompts.py  trace.py
src/corpus/: db.py  fetch.py  fetch_fulltext.py  schema.sql  stats.py
src/evals/: ablate.py  baseline_norag.py  build_fulltext_questions.py  build_golden_set.py  citations.py  cost_latency.py  finalize_golden_set.py  golden_set.jsonl  golden_set_fulltext.jsonl  judges.py  metrics.py  report.py  run.py
src/retrieval/: build_index.py  chunk.py  cli.py  dense.py  embed.py  hybrid.py  lexical.py  rerank.py
tests/: test_agent_graph.py  test_chunk.py  test_citations.py  test_golden_set_verification.py  test_hybrid.py  test_metrics.py  test_run.py
