[project]
name = "papertrail"
version = "0.1.0"
description = "Citation-grounded biomedical RAG agent with an evaluation harness"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32",
    "psycopg[binary]>=3.2",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "lxml>=5.3",
    "tqdm>=4.67",
    "tenacity>=9.0",
    "openai>=2.44.0",
    "sentence-transformers>=5.6.0",
    "numpy>=2.5.0",
]

[tool.uv]
package = false
